force-app/main/default/objects/ilms__IL_Points__c/ilms__IL_Points__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Impact LMS Points</description>
    <label>IL Points</label>
</CustomObject>