force-app/main/default/objects/ilms__IL_Points__c/fields/ilms__Certification_Completed__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification_Completed__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Certification Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>