force-app/main/default/objects/ilms__IL_Points__c/fields/ilms__Course_Completed__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Completed__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Course Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>