force-app/main/default/objects/ilms__IL_Points__c/fields/ilms__Course_Started__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Started__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Course Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>