force-app/main/default/objects/ilms__IL_Points__c/fields/ilms__Quiz_Passed__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_Passed__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Quiz Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>